<resources>
    <string name="app_name">Animal_app</string>
    <string name="place_given">Place where given</string>
    <string name="buying_status">Bought again?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="weight_gain">Weight-gain</string>
    <string name="drying_period">Drying period(in months)</string>
    <string name="temperature">Temperature(Degree-celsius)</string>
    <string name="humidity">Humidity(%)</string>
    <string name="mosquitoes">Mosquitoes present?</string>
    <string name="flies">Flies present?</string>
    <string name="submit">Submit</string>
    <string name="green_fodder">Green fodder(kgs)</string>
    <string name="dry_fodder">Dry fodder(kgs)</string>
    <string name="source_of_nutrients">Sources of vitamins,proteins,minerals</string>
    <string name="jaggery">Jaggery(gms)</string>
    <string name="calcium">Calcium(gms)</string>
    <string name="mustard">Mustardoil(gms)</string>
    <string name="bhussa">Bhussa</string>
    <string name="beerkutti">Beer kutti</string>
    <string name="chunni">Chunni(kgs)</string>
    <string name="kapas">Kapas(kgs)</string>
    <string name="milk_produced">Milk produced(litres)</string>
    <string name="milk_contents">Milk Contents</string>
    <string name="fat">Fat(%)</string>
    <string name="protein">Protein(%)</string>
    <string name="carbohydrate">Carbohydrate(%)</string>
    <string name="lactation">Buffalo lactating or not</string>
    <string name="milkman">Change in milkman</string>
    <string name="injection">Injection given to increase yield or not</string>
    <string name="animal_id">Animal-ID</string>
    <string name="height">Height(inch)</string>
    <string name="width">Width(inch)</string>
    <string name="area">Area of shed</string>
    <string name="weight">Weight(kgs)</string>
    <string name="duration">Duration after which animal starts eating(in days)</string>
    <string name="tied">Tied?</string>
    <string name="surface">Surface of shed</string>
    <string name="soil">Soil</string>
    <string name="concrete">Concrete</string>
    <string name="age">Age</string>
    <string name="breed">Breed</string>
    <string name="origin">Origin</string>
    <string name="season">Seasonal</string>
    <string name="location">Location</string>
    <string name="gender">Gender</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="milkyields">Milk Yields</string>
    <string name="typeoffodder">Types of fodder</string>
    <string name="lactationdetails">Lactation Details</string>
    <string name="births">Number of births given</string>
    <string name="calving_interval">Calving interval</string>
    <string name="lactationduration">Lactation Duration</string>
    <string name="lactationyield">Milk yield during lactation(litres per day)</string>
    <string name="generalpractice">General practices used to remove calf</string>
    <string name="otherdetails">Miscellaneous Details</string>
    <string name="free">Free</string>
    <string name="pooltendency">Tendency to be taken to pools</string>
    <string name="grazing">Grazing</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
