<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:id="@+id/tv_lactation_details"
            android:text="@string/lactationdetails"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20dp"
            />
        <LinearLayout
            android:id="@+id/ll_births_given"
            android:orientation="horizontal"
            android:layout_below="@id/tv_lactation_details"
            android:layout_width="match_parent"

            android:layout_height="60dp">
            <TextView
                android:text="@string/births"
                android:id="@+id/tv_births_given"
                android:textSize="23dp"
                android:layout_marginTop="10dp"
                android:layout_height="match_parent"
                android:layout_width="200dp">
            </TextView>
            <Spinner
                android:id="@+id/spinner_births_given"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="10dp">
            </Spinner>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_calving_interval"
            android:layout_below="@+id/ll_births_given"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="60dp">
            <TextView
                android:text="@string/calving_interval"
                android:id="@+id/tv_calving_interval"
                android:textSize="23dp"
                android:layout_marginTop="10dp"
                android:layout_height="match_parent"
                android:layout_width="200dp">
            </TextView>
            <Spinner
                android:id="@+id/spinner_calving_interval"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="10dp">
            </Spinner>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_lactation_duration"
            android:layout_below="@+id/ll_calving_interval"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="60dp">
            <TextView
                android:text="@string/lactationduration"
                android:id="@+id/tv_lactation_duration"
                android:textSize="20dp"
                android:layout_marginTop="10dp"
                android:layout_height="match_parent"
                android:layout_width="200dp">
            </TextView>
            <Spinner
                android:id="@+id/spinner_lactation_duration"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="10dp">
            </Spinner>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_lactation_milk_yield"
            android:layout_below="@+id/ll_lactation_duration"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="80dp">
            <TextView
                android:text="@string/lactationyield"
                android:id="@+id/tv_lactation_milk_yield"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:layout_height="match_parent"
                android:layout_width="210dp">
            </TextView>
            <Spinner
                android:id="@+id/spinner_lactation_milk_yield"
                android:layout_width="140dp"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="10dp">
            </Spinner>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/tv_calf_remove"
            android:layout_below="@+id/ll_lactation_milk_yield"
            android:text="@string/generalpractice"
            android:textSize="20sp" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:id="@+id/et_calf_remove"
            android:layout_below="@+id/tv_calf_remove"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="30dp"
            android:id="@+id/tv_miscellaneous_details"
            android:layout_below="@id/et_calf_remove"
            android:text="@string/otherdetails"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20dp" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/ll_tied_or_free"
            android:orientation="horizontal"
            android:layout_below="@+id/tv_miscellaneous_details"
            android:layout_width="match_parent"
            android:layout_height="40dp">
            <RadioGroup
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <RadioButton
                    android:layout_width="75dp"
                    android:layout_height="match_parent"
                    android:id="@+id/radiobutton1_tied"
                    android:text="@string/tied"/>
                <RadioButton
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:id="@+id/radiobutton1_free"
                    android:text="@string/free"/>
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_pools"
            android:orientation="horizontal"
            android:layout_below="@id/ll_tied_or_free"
            android:layout_width="match_parent"
            android:layout_height="40dp">
            <TextView
                android:text="@string/pooltendency"
                android:id="@+id/tv_pools"
                android:textSize="18dp"
                android:layout_marginTop="10dp"
                android:layout_height="match_parent"
                android:layout_width="250dp">
            </TextView>
            <Switch
                android:id="@+id/switch_pools"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="10dp">
            </Switch>
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/ll_grazing"
            android:orientation="horizontal"
            android:layout_below="@+id/ll_pools"
            android:layout_width="match_parent"
            android:layout_height="40dp">
            <TextView
                android:text="@string/grazing"
                android:id="@+id/tv_grazing"
                android:textSize="25dp"
                android:layout_marginTop="10dp"
                android:layout_height="match_parent"
                android:layout_width="150dp">
            </TextView>
            <RadioGroup
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <RadioButton
                    android:layout_width="75dp"
                    android:layout_height="match_parent"
                    android:id="@+id/radiobutton1_yes"
                    android:text="@string/yes"/>
                <RadioButton
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:id="@+id/radiobutton1_no"
                    android:text="@string/no"/>
            </RadioGroup>
        </LinearLayout>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/et_grazing_if_yes"
            android:layout_below="@id/ll_grazing"
            android:hint="If yes,Enter distance"
            android:textSize="20dp" />
    </RelativeLayout>
</ScrollView>