<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_first_day_at_farm"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.smrutimukundvarvadekar.animal_app.FirstDayAtFarmActivity">
<LinearLayout
    android:id="@+id/ll_id"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="40dp">
    <TextView
        android:text="@string/animal_id"
        android:id="@+id/tv_id"
        android:textSize="25dp"
        android:layout_marginTop="10dp"
        android:layout_height="match_parent"
        android:layout_width="150dp">
    </TextView>
    <EditText
        android:layout_alignParentLeft="true"
        android:text=""
        android:layout_marginTop="10dp"
        android:id="@+id/et_id"
        android:layout_height="wrap_content"
        android:layout_width="150dp">
    </EditText>
</LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/ll_height"
        android:layout_below="@+id/ll_id"
        android:layout_width="match_parent"
        android:layout_height="40dp">
        <TextView
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:textSize="25dp"
            android:layout_marginTop="10dp"
            android:text="@string/height"
            android:id="@+id/tv_height"/>
        <Spinner
            android:layout_alignParentLeft="true"
            android:layout_marginTop="10dp"
            android:id="@+id/spinner_height1"
            android:layout_height="wrap_content"
            android:layout_width="75dp">
        </Spinner>
        <Spinner
            android:layout_alignParentLeft="true"
            android:layout_marginTop="10dp"
            android:id="@+id/spinner_height2"
            android:layout_height="wrap_content"
            android:layout_width="75dp">
        </Spinner>

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/ll_width"
        android:layout_below="@+id/ll_height"
        android:layout_width="match_parent"
        android:layout_height="40dp">
        <TextView
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:textSize="25dp"
            android:layout_marginTop="10dp"
            android:text="@string/width"
            android:id="@+id/tv_width"/>
        <Spinner
            android:layout_alignParentLeft="true"
            android:layout_marginTop="10dp"
            android:id="@+id/spinner_width1"
            android:layout_height="wrap_content"
            android:layout_width="75dp">
        </Spinner>
        <Spinner
            android:layout_alignParentLeft="true"
            android:layout_marginTop="10dp"
            android:id="@+id/spinner_width2"
            android:layout_height="wrap_content"
            android:layout_width="75dp">
        </Spinner>

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/ll_area_of_shed"
        android:layout_below="@+id/ll_width"
        android:layout_width="match_parent"
        android:layout_height="40dp">
        <TextView
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:textSize="25dp"
            android:layout_marginTop="10dp"
            android:text="@string/area"
            android:id="@+id/tv_area"/>
        <EditText
            android:layout_alignParentLeft="true"
            android:text=""
            android:layout_marginTop="10dp"
            android:id="@+id/et_area_height"
            android:layout_height="wrap_content"
            android:layout_width="75dp">
        </EditText>
        <EditText
            android:layout_alignParentLeft="true"
            android:text=""
            android:layout_marginTop="10dp"
            android:id="@+id/et_area_width"
            android:layout_height="wrap_content"
            android:layout_width="75dp">
        </EditText>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/ll_weight"
        android:layout_below="@+id/ll_area_of_shed"
        android:layout_width="match_parent"
        android:layout_height="40dp">
        <TextView
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:textSize="25dp"
            android:layout_marginTop="10dp"
            android:text="@string/weight"
            android:id="@+id/tv_weight"/>
        <Spinner
            android:layout_alignParentLeft="true"
            android:layout_marginTop="10dp"
            android:id="@+id/spinner_weight1"
            android:layout_height="wrap_content"
            android:layout_width="75dp">
        </Spinner>
        <Spinner
            android:layout_alignParentLeft="true"
            android:layout_marginTop="10dp"
            android:id="@+id/spinner_weight2"
            android:layout_height="wrap_content"
            android:layout_width="75dp">
        </Spinner>

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/ll_duration1"
        android:layout_below="@+id/ll_weight"
        android:layout_width="match_parent"
        android:layout_height="70dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="77dp"
            android:textSize="25dp"
            android:layout_marginTop="10dp"
            android:text="@string/duration"
            android:id="@+id/tv_eat"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/ll_duration2"
        android:layout_below="@+id/ll_duration1"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center">
    <Spinner
        android:layout_marginTop="10dp"
        android:layout_below="@+id/tv_duration"
        android:id="@+id/spinner_duration"
        android:layout_height="wrap_content"
        android:layout_width="100dp">
    </Spinner>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/ll_tied"
        android:layout_below="@+id/ll_duration2"
        android:layout_width="match_parent"
        android:layout_height="40dp">
        <TextView
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:textSize="25dp"
            android:layout_marginTop="10dp"
            android:text="@string/tied"
            android:id="@+id/tv_tied"/>
        <RadioButton
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="10dp"
            android:text="@string/yes"/>
        <RadioButton
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="10dp"
            android:text="@string/no"/>

    </LinearLayout>
    <LinearLayout
    android:orientation="horizontal"
    android:id="@+id/ll_surface"
    android:layout_below="@+id/ll_tied"
    android:layout_width="match_parent"
    android:layout_height="70dp">
    <TextView
        android:layout_width="150dp"
        android:layout_height="match_parent"
        android:textSize="25dp"
        android:layout_marginTop="10dp"
        android:text="@string/surface"
        android:id="@+id/tv_surface"/>
    <RadioButton
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="10dp"
        android:id="@+id/soil"
        android:text="@string/soil"/>
    <RadioButton
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="10dp"
        android:id="@+id/concrete"
        android:text="@string/concrete"/>
</LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/ll_submit"
        android:layout_below="@+id/ll_surface"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:gravity="center">

        <Button
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="@string/submit"
            android:id="@+id/submit">

        </Button>
    </LinearLayout>
</RelativeLayout>
