<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_climate_at_farm"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.smrutimukundvarvadekar.animal_app.ClimateAtFarmActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:id="@+id/ll_date"
        android:gravity="center"
        >
        <DatePicker
            android:layout_marginTop="10dp"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            >
        </DatePicker>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/ll_temperature"
        android:layout_below="@+id/ll_date"
        android:layout_width="match_parent"
        android:layout_height="40dp">
    <TextView
        android:layout_width="150dp"
        android:layout_height="match_parent"
        android:textSize="25dp"
        android:layout_marginTop="10dp"
        android:text="@string/temperature"
        android:id="@+id/tv_weight"/>
    <EditText
            android:layout_alignParentLeft="true"
            android:text=""
            android:layout_marginTop="10dp"
            android:id="@+id/et_temperature"
            android:layout_height="wrap_content"
            android:layout_width="75dp">
    </EditText>
    <Spinner
            android:layout_width="75dp"
            android:layout_height="match_parent"
            android:id="@+id/spinner_temperature"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="10dp"
            >
    </Spinner>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:id="@+id/ll_humidity"
        android:layout_below="@+id/ll_temperature">
        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="25dp"
            android:text="@string/humidity"/>
        <EditText
            android:layout_alignParentLeft="true"
            android:text=""
            android:layout_marginTop="10dp"
            android:id="@+id/et_humidity"
            android:layout_height="wrap_content"
            android:layout_width="150dp">
        </EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:id="@+id/ll_mosquitoes"
        android:layout_below="@+id/ll_humidity">
    <TextView
        android:id="@+id/tv_mosquitoes"
        android:textSize="25dp"
        android:layout_marginTop="10dp"
        android:layout_height="match_parent"
        android:layout_width="200dp"
        android:text="@string/mosquitoes">
    </TextView>
        <RadioButton
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="10dp"
            android:id="@+id/yes"
            android:text="@string/yes"/>
        <RadioButton
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="10dp"
            android:id="@+id/no"
            android:text="@string/no"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:id="@+id/ll_flies"
        android:layout_below="@+id/ll_mosquitoes">
        <TextView
            android:id="@+id/tv_flies"
            android:textSize="25dp"
            android:layout_marginTop="10dp"
            android:layout_height="match_parent"
            android:layout_width="200dp"
            android:text="@string/flies">
        </TextView>
        <RadioButton
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="10dp"
            android:id="@+id/yes1"
            android:text="@string/yes"/>
        <RadioButton
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="10dp"
            android:id="@+id/no1"
            android:text="@string/no"/>

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/ll_submit"
        android:layout_below="@+id/ll_flies"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:gravity="center">

        <Button
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="@string/submit"
            android:id="@+id/submit">

        </Button>
    </LinearLayout>
</RelativeLayout>
