<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_feed_intake"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.smrutimukundvarvadekar.animal_app.FeedIntakeActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:orientation="horizontal"
    android:id="@+id/ll_search_id">
    <SearchView
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        >
    </SearchView>
    <Spinner
        android:layout_width="150dp"
        android:layout_height="match_parent"
        android:id="@+id/spinner_id"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="10dp"
        >
    </Spinner>
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:id="@+id/ll_date"
        android:gravity="center"
        android:layout_below="@+id/ll_search_id">
        <DatePicker
            android:layout_marginTop="10dp"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            >
        </DatePicker>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:id="@+id/ll_fodder"
        android:layout_below="@+id/ll_date">
        <TextView
            android:text="@string/green_fodder"
            android:id="@+id/tv_greenfodder"
            android:textSize="25dp"
            android:layout_marginTop="10dp"
            android:layout_height="match_parent"
            android:layout_width="75dp">
        </TextView>
        <Spinner
            android:layout_alignParentLeft="true"
            android:layout_marginTop="10dp"
            android:id="@+id/spinner_greenfodder"
            android:layout_height="wrap_content"
            android:layout_width="75dp">
        </Spinner>
        <TextView
            android:text="@string/dry_fodder"
            android:id="@+id/tv_dryfodder"
            android:textSize="25dp"
            android:layout_marginTop="10dp"
            android:layout_height="match_parent"
            android:layout_width="75dp">
        </TextView>
        <Spinner
            android:layout_alignParentLeft="true"
            android:layout_marginTop="10dp"
            android:id="@+id/spinner_dryfodder"
            android:layout_height="wrap_content"
            android:layout_width="75dp">
        </Spinner>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:id="@+id/ll_sources"
        android:layout_below="@+id/ll_fodder">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="25dp"
            android:text="@string/source_of_nutrients"/>
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:id="@+id/ll_sourcedetails1"
        android:layout_below="@+id/ll_sources">
    <TextView
        android:id="@+id/tv_jaggery"
        android:textSize="25dp"
        android:layout_marginTop="10dp"
        android:layout_height="match_parent"
        android:layout_width="150dp"
        android:text="@string/jaggery">
    </TextView>
    <Spinner
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="10dp"
        android:id="@+id/spinner_jaggery">

    </Spinner>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:id="@+id/ll_sourcedetails2"
        android:layout_below="@+id/ll_sourcedetails1">
        <TextView
            android:id="@+id/tv_calcium"
            android:textSize="25dp"
            android:layout_marginTop="10dp"
            android:layout_height="match_parent"
            android:layout_width="150dp"
            android:text="@string/calcium">
        </TextView>
        <Spinner
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="10dp"
            android:id="@+id/spinner_calcium">

        </Spinner>
    </LinearLayout>
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:orientation="horizontal"
    android:id="@+id/ll_sourcedetails3"
    android:layout_below="@+id/ll_sourcedetails2">
    <TextView
        android:id="@+id/tv_mustardoil"
        android:textSize="25dp"
        android:layout_marginTop="10dp"
        android:layout_height="match_parent"
        android:layout_width="200dp"
        android:text="@string/mustard">
    </TextView>
    <Spinner
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="10dp"
        android:id="@+id/spinner_mustardoil">

    </Spinner>
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:id="@+id/ll_sourcedetails4"
        android:layout_below="@+id/ll_sourcedetails3">
        <RadioButton
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="10dp"
            android:id="@+id/bhussa"
            android:text="@string/bhussa"/>
        <RadioButton
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="10dp"
            android:id="@+id/beer_kutti"
            android:text="@string/beerkutti"/>
        <Spinner
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="10dp"
            android:id="@+id/spinner_beer_bhussa">

        </Spinner>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:id="@+id/ll_sourcedetails5"
        android:layout_below="@+id/ll_sourcedetails4">
        <TextView
            android:id="@+id/tv_chunni"
            android:textSize="25dp"
            android:layout_marginTop="10dp"
            android:layout_height="match_parent"
            android:layout_width="150dp"
            android:text="@string/chunni">
        </TextView>
        <Spinner
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="10dp"
            android:id="@+id/spinner_chunni">

        </Spinner>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:id="@+id/ll_sourcedetails6"
        android:layout_below="@+id/ll_sourcedetails5">
        <TextView
            android:id="@+id/tv_kapas"
            android:textSize="25dp"
            android:layout_marginTop="10dp"
            android:layout_height="match_parent"
            android:layout_width="150dp"
            android:text="@string/kapas">
        </TextView>
        <Spinner
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="10dp"
            android:id="@+id/spinner_kapas">

        </Spinner>
    </LinearLayout>
</RelativeLayout>
